# n8

./: ChangeLog.txt  Makefile.in  README.md  configure  configure.ac  n8.rc  n8.sln  n8.txt  n8.vcxproj  n8.vcxproj.filters
etc/: Makefile.in  key.eff  key.ele  key.system  key.tk  key.vz  n8keyword  n8rc  n8rc.ele  n8rc.tk  term  term.kterm  term.rxvt  term.xterm  term.xterm-256color
lib/: BSD-copyright.jp  Makefile.in  config.h  configure  configure.ac  eaw.h  emoji.h  generic.c  generic.h  hash.c  hash.h  misc.c  misc.h  regexp.c  regexp.h  sh_make.c  sh_shells.c  term.c  term.h  term_inkey.c  term_inkey.h  tparm.c
ne_doc/old_doc/: Makefile
package/: n8.spec
package/deb_work/DEBIAN/: control  copyright
src/: Makefile.in  block.c  block.h  config.h  crt.c  crt.h  cursor.c  cursor.h  disp.c  disp.h  file.c  file.h  filer.c  filer.h  function.h  input.c  input.h  iskanji.c  iskanji.h  kanji.h  keyf.c  keyf.h  keys.c  keys.h  line.c  line.h  lineedit.c  lineedit.h  list.c  list.h  menu.c  menu.h  n8.c  n8.h  search.c  search.h  setopt.c  setopt.h  sh.h  sh_defs.h  (+1 more)
